Assignment 2/project/client/src/Navbar.css
.navbar {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 30px 20px;
  font-size: 1.1em;
  list-style: none;
}

.navbar h1 {
  margin: 0;
  font-size: 2em;
  color: rgb(183, 0, 0);
}

.navbar ul {
  display: flex;
  gap: 2.5em;
  margin: 0;
  padding: 0;
}

.navbar li {
  list-style: none;
  text-transform: uppercase;
}

.navbar a {
  text-decoration: none;
  color: rgb(183, 0, 0);
  transition: color 0.3s;
}

.navbar a:hover {
  color: rgb(0, 0, 0);
}

@media (max-width: 600px) {
  .navbar {
    flex-direction: column;
    align-items: center;
    padding: 1em 0;
  }

  .navbar h1 {
    font-size: 1.75em;
    margin-bottom: 0.5em;
    text-align: center;
  }

  .navbar ul {
    flex-direction: column;
    gap: 0.5em;
    width: 100%;
    padding: 0;
  }

  .navbar li {
    text-align: center;
  }

  .navbar .btn {
    width: 80%;
    margin: 0.25em auto;
  }
}

